--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -4,10 +4,10 @@
 @import './base/restart';
 
 //components
-@import './components/header';
+@import './components/header','./components/card';
 
 //pages
-@import './pages/index', './pages/registration', './pages/login';
+@import './pages/index', './pages/registration', './pages/login', './pages/home';
 
 .main {
   .header {
