--- a/assets/stylesheets/pages/_login.scss
+++ b/assets/stylesheets/pages/_login.scss
@@ -16,8 +16,14 @@
       width: 100%;
       height: 70vh;
       margin-top: 30px;
-      // @include flexBox(space-between, center);
-      .text {
+
+      .img{
+padding-left: 200px;
+// @include flexBox(space-between, center);
+}
+.text {
+        padding-left: 100px;
+        margin-top: 55px;
         font-weight: 400;
         font-size: 14px;
         line-height: 150.5%;
@@ -97,6 +103,7 @@
           background-color: #4246c9;
           color: #ffffff;
           margin-top: 20px;
+          cursor: pointer;
         }
         .log {
           display: flex;
