--- a/assets/stylesheets/pages/_registration.scss
+++ b/assets/stylesheets/pages/_registration.scss
@@ -33,7 +33,8 @@
       line-height: 150.5%;
       background-color: #4246c9;
       color: #ffffff;
-    }
+      cursor: pointer;
+    }m,jhgygre A670HUJHUYYHMMM
   }
 
   .reg {
@@ -104,6 +105,7 @@
           background-color: #4246c9;
           color: #ffffff;
           margin-top: 20px;
+          cursor: pointer;
         }
         .log{
           display: flex;
